// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutUs: Match Snapshots 1 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "flexDirection": "column",
      },
      Object {
        "backgroundColor": "#FFF",
      },
    ]
  }
>
  <ScrollViewMock>
    <AppHeader
      navigation={[MockFunction]}
      primaryColor="#009CFF"
      theme={
        Object {
          "background": "#FFF",
          "color": "#17212D",
          "isDark": false,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "paddingVertical": 20,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "Roboto-Light",
              "paddingHorizontal": 20,
            },
            Object {
              "color": "#17212D",
            },
          ]
        }
      >
        This project involves implementing steganography algorithms. It allows users to hide messages within image files, using these algorithms. It was originally developed using the Ionic/Apache Cordova framework. This app is a rewrite of my third year dissertation project. This new app is written using Expo/React Native. There are numerous improvements that were made during the rewrite. For example the new app has a much better UI/UX and has some new features such as sharing the encoded images.
      </Text>
    </View>
    <View>
      <AboutList
        backgroundColor="#FFF"
        color="#17212D"
        items={
          Array [
            Object {
              "icon": Object {
                "color": "#FF9501",
                "name": "versions",
                "type": "octicon",
              },
              "title": "Version 0.1.0",
              "url": "https://github.com/hmajid2301/Stegappasaurus",
            },
            Object {
              "icon": Object {
                "color": "#007CFE",
                "name": "code-fork",
                "type": "font-awesome",
              },
              "title": "Fork this Project on GitHub",
              "url": "https://github.com/hmajid2301/Stegappasaurus",
            },
            Object {
              "icon": Object {
                "color": "#222",
                "name": "github",
                "type": "font-awesome",
              },
              "title": "Personal GitHub",
              "url": "https://github.com/hmajid2301",
            },
            Object {
              "icon": Object {
                "color": "#4CDA64",
                "name": "web",
                "type": "material-community",
              },
              "title": "Personal Website",
              "url": "https://hmajid2301.github.io",
            },
            Object {
              "function_to_call": "store",
              "icon": Object {
                "color": "#FD3C2D",
                "name": "rate-review",
                "type": "material",
              },
              "title": "Rate the App",
            },
          ]
        }
      />
    </View>
  </ScrollViewMock>
</View>
`;

exports[`AboutUs: Match Snapshots 2 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "flexDirection": "column",
      },
      Object {
        "backgroundColor": "#17212D",
      },
    ]
  }
>
  <ScrollViewMock>
    <AppHeader
      navigation={[MockFunction]}
      primaryColor="#009CFF"
      theme={
        Object {
          "background": "#17212D",
          "color": "#FFF",
          "isDark": true,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "paddingVertical": 20,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "Roboto-Light",
              "paddingHorizontal": 20,
            },
            Object {
              "color": "#FFF",
            },
          ]
        }
      >
        This project involves implementing steganography algorithms. It allows users to hide messages within image files, using these algorithms. It was originally developed using the Ionic/Apache Cordova framework. This app is a rewrite of my third year dissertation project. This new app is written using Expo/React Native. There are numerous improvements that were made during the rewrite. For example the new app has a much better UI/UX and has some new features such as sharing the encoded images.
      </Text>
    </View>
    <View>
      <AboutList
        backgroundColor="#17212D"
        color="#FFF"
        items={
          Array [
            Object {
              "icon": Object {
                "color": "#FF9501",
                "name": "versions",
                "type": "octicon",
              },
              "title": "Version 0.1.0",
              "url": "https://github.com/hmajid2301/Stegappasaurus",
            },
            Object {
              "icon": Object {
                "color": "#007CFE",
                "name": "code-fork",
                "type": "font-awesome",
              },
              "title": "Fork this Project on GitHub",
              "url": "https://github.com/hmajid2301/Stegappasaurus",
            },
            Object {
              "icon": Object {
                "color": "#222",
                "name": "github",
                "type": "font-awesome",
              },
              "title": "Personal GitHub",
              "url": "https://github.com/hmajid2301",
            },
            Object {
              "icon": Object {
                "color": "#4CDA64",
                "name": "web",
                "type": "material-community",
              },
              "title": "Personal Website",
              "url": "https://hmajid2301.github.io",
            },
            Object {
              "function_to_call": "store",
              "icon": Object {
                "color": "#FD3C2D",
                "name": "rate-review",
                "type": "material",
              },
              "title": "Rate the App",
            },
          ]
        }
      />
    </View>
  </ScrollViewMock>
</View>
`;
